# voip

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VoIP.sln  VoIP.vcxproj  VoIP.vcxproj.filters  appveyor.yml
src/common/: common_functions.cc  common_functions.h  log_manager.cc  log_manager.h  socket.cc  socket.h  timer_manager.cc  timer_manager.h
src/rtp/: rtp_defs.h  rtp_header.cc  rtp_header.h  rtp_packet.cc  rtp_packet.h  rtp_session.cc  rtp_session.h  rtp_transport.cc  rtp_transport.h
src/sdp/: sdp_defs.h  sdp_description.cc  sdp_description.h  sdp_field.cc  sdp_field.h  sdp_functions.cc  sdp_functions.h
src/sip/: sip_address.cc  sip_address.h  sip_body.cc  sip_body.h  sip_call.cc  sip_call.h  sip_defs.h  sip_dialog.cc  sip_dialog.h  sip_functions.cc  sip_functions.h  sip_header.cc  sip_header.h  sip_manager.cc  sip_manager.h  sip_message.cc  sip_message.h  sip_request.cc  sip_request.h  sip_response.cc  sip_response.h  sip_transaction.cc  sip_transaction.h  sip_transactions.cc  sip_transactions.h  sip_transport.cc  sip_transport.h  sip_user_agent.cc  sip_user_agent.h
src/util/: log_manager.cc  log_manager.h  parameter_list.cc  parameter_list.h  query.cc  query.h  socket.cc  socket.h  string_functions.cc  string_functions.h  timer_manager.cc  timer_manager.h  util_defs.h  util_functions.cc  util_functions.h
test/: sip_header_test.cc  sip_test.cc
test/common/: common_test.cc  socket_test.cc  socket_test.h  timer_manager_test.cc  timer_manager_test.h
test/rtp/: rtp_header_test.cc  rtp_header_test.h  rtp_packet_test.cc  rtp_packet_test.h  rtp_session_test.cc  rtp_session_test.h  rtp_test.cc  rtp_transport_test.cc  rtp_transport_test.h
test/sdp/: sdp_description_test.cc  sdp_description_test.h  sdp_field_test.cc  sdp_field_test.h  sdp_test.cc
test/sip/: sip_address_test.cc  sip_address_test.h  sip_body_test.cc  sip_body_test.h  sip_call_test.cc  sip_call_test.h  sip_header_test.cc  sip_header_test.h  sip_manager_test.cc  sip_manager_test.h  sip_message_test.cc  sip_message_test.h  sip_test.cc  sip_transaction_test.cc  sip_transaction_test.h  sip_transport_test.cc  sip_transport_test.h  sip_user_agent_test.cc  sip_user_agent_test.h
test/util/: socket_test.cc  socket_test.h  timer_manager_test.cc  timer_manager_test.h  util_test.cc
